# abstr

./: .gitignore
cep/: CMakeLists.txt  max.cpp  test.cpp
cep/kolejki/: kolejki.cpp  tresc.md
cep/matrix/: matrix.cpp
cep/zestaw_4/: test.cpp  zadanie_4_1.cpp  zadanie_4_2.cpp  zadanie_4_4.cpp  zadanie_4_5.cpp
cep/zestaw_5/: szablony.cpp  szablony_cd.cpp
cep/zestaw_6/: zad_6_1.cpp  zad_6_2.cpp  zad_6_3.cpp  zad_6_4.cpp  zad_6_5.cpp
cep/zestaw_7/: cechy_1.cpp
cep/zestaw_8/: suma_ciagu.cpp
cwiczenia/src/main/java/generyki/cw_3_1/: FourTuple.java  ThreeTuple.java  TwoTuple.java  main.java
cwiczenia/src/main/java/generyki/cw_3_4/: Complex.java  ComplexOperator.java  DoubleOperator.java  FloatOperator.java  IntegerOperator.java  Matrix.java  Operator.java  SquareMatrix.java  test.java
cwiczenia/src/main/java/interfejsy_projektowanie/cw_1/: Bike.java  Car.java  Motorbike.java  Taxi.java  Vehicle.java
cwiczenia/src/main/java/interfejsy_projektowanie/cw_2/: Animal.java  Cat.java  Dog.java  Parrot.java  main.java
cwiczenia/src/main/java/interfejsy_projektowanie/cw_3/: Animal.java  Cat.java  Dog.java  Fish.java  Main.java  Parrot.java  Robot.java  Speakable.java
cwiczenia/src/main/java/interfejsy_projektowanie/cw_4/: Chaplain.java  Human.java  Main.java  Priest.java  Soldier.java
cwiczenia/src/main/java/interfejsy_projektowanie/cw_factory/: Rectangle.java  Square.java
cwiczenia/src/main/java/interfejsy_projektowanie/zad_2_6/: Q.java  QueueComposition.java  QueueInheritance.java  test.java
(+1 files in other folders)
